refactor: simplify executable file search and npm install command

--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -32,7 +32,7 @@
       "target": [
         {
           "target": "portable",
-          "arch": ["ia32", "x64"]
+          "arch": ["ia32"]
         }
       ],
       "requestedExecutionLevel": "asInvoker",
