feat: Implement build status tracking and asynchronous processing
- Added in-memory build status tracking with detailed phases and descriptions.
- Introduced `updateBuildStatus` and `getBuildStatus` functions for managing build states.
- Refactored the `/api/convert` endpoint to initiate an asynchronous build process.
- Enhanced error handling during the build process with specific failure messages.
- Updated the build process to track each phase: uploading, extracting, validating, generating, installing, building, distributing, and completion.
- Modified the download endpoint to return the correct executable file.
- Improved status checking to return detailed build phase information.

refactor: Enhance Electron app creation and icon processing

- Updated Electron app creation logic to sanitize app names and validate configurations.
- Changed icon processing to automatically resize and optimize PNG icons for better compatibility.
- Removed unnecessary preload.js template and related code.
- Adjusted package.json template to include version in artifact naming.
- Increased timeout for build commands to accommodate larger builds.

fix: Improve error messages for better user feedback

- Enhanced error messages throughout the file processing and Electron building stages to provide clearer guidance on potential issues.

--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "unzipper": "^0.10.14",
     "fs-extra": "^11.2.0",
     "uuid": "^9.0.1",
-    "path": "^0.12.7",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.1.5",
-    "validator": "^13.11.0"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
