--- a/templates/main.js.template
+++ b/templates/main.js.template
@@ -13,7 +13,8 @@ function createWindow() {
       preload: path.join(__dirname, 'preload.js')
     },
     icon: path.join(__dirname, 'app', 'icon.ico'), // Optional icon
-    show: false // Don't show until ready-to-show
+    show: false, // Don't show until ready-to-show
+    titleBarStyle: 'hidden', // Hide titlebar controls
   });
 
   // Load the app
