--- a/templates/main.js.template
+++ b/templates/main.js.template
@@ -9,12 +9,11 @@ function createWindow() {
     webPreferences: {
       nodeIntegration: false,
       contextIsolation: true,
-      enableRemoteModule: false,
-      preload: path.join(__dirname, 'preload.js')
+      enableRemoteModule: false
     },
     icon: path.join(__dirname, 'app', 'icon.ico'), // Optional icon
-    show: false, // Don't show until ready-to-show
-    titleBarStyle: 'hidden', // Hide titlebar controls
+    titleBarStyle: 'hidden', // Hide titlebar controls,
+    titleBarOverLay: true
   });
 
   // Load the app
