--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
   "name": "html2exe-converter",
   "version": "1.0.0",
-  "description": "A web service that converts HTML/CSS/JS zip files into executable applications using Electron",
+  "description": "A web service that converts HTML/CSS/JS zip files into executable applications using Wails",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "node test/test.js"
   },
-  "keywords": ["html", "exe", "electron", "converter", "desktop-app"],
+  "keywords": [
+    "html",
+    "exe",
+    "wails",
+    "converter",
+    "desktop-app"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "unzipper": "^0.10.14",
-    "fs-extra": "^11.2.0",
-    "uuid": "^9.0.1",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "sharp": "^0.33.1"
+    "fs-extra": "^11.2.0",
+    "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.1",
+    "sharp-ico": "^0.1.5",
+    "unzipper": "^0.10.14",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "electron": "^28.1.3",
-    "electron-builder": "^24.9.1"
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=16.0.0"
