--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "node test/test.js"
+    "test": "jest"
   },
   "keywords": [
     "html",
@@ -24,13 +24,15 @@
     "fs-extra": "^11.2.0",
     "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.1",
+    "sharp": "^0.34.3",
     "sharp-ico": "^0.1.5",
     "unzipper": "^0.10.14",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jest": "^30.0.5",
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.4"
   },
   "engines": {
     "node": ">=16.0.0"
